[gd_scene load_steps=33 format=3 uid="uid://copylsosasdux"]

[ext_resource type="Script" uid="uid://b0awa3lvoo8rt" path="res://Scripts/LevelLogic/Level5.gd" id="1_y1pfi"]
[ext_resource type="PackedScene" uid="uid://cugpi5ymx1ua8" path="res://Scenes/PlantScenes/PlantManager.tscn" id="2_istt8"]
[ext_resource type="PackedScene" uid="uid://dwihkqs25js7n" path="res://Scenes/ZombieScenes/ZombieSpawner.tscn" id="3_atfoh"]
[ext_resource type="PackedScene" uid="uid://bteegsg6ig7de" path="res://Scenes/Systems/WavePreview.tscn" id="4_jm0qw"]
[ext_resource type="PackedScene" uid="uid://be6sbtmqr5d2f" path="res://Scenes/Systems/GridManager.tscn" id="5_dn4aj"]
[ext_resource type="PackedScene" uid="uid://b6a02kdhke01v" path="res://Scenes/Systems/WaveManager.tscn" id="6_b1djl"]
[ext_resource type="Script" uid="uid://c31n61qr27kvd" path="res://Scripts/LevelLogic/WaveManager_Lvl3.gd" id="7_7q734"]
[ext_resource type="AudioStream" uid="uid://0obob1n8xw3p" path="res://Audio/gameplay track bounce 8-13-25.wav" id="8_dn4aj"]
[ext_resource type="PackedScene" uid="uid://802bvw3m4n0a" path="res://Scenes/PlantScenes/PlantSelectionMenu.tscn" id="9_rwem5"]
[ext_resource type="PackedScene" uid="uid://3ls67604vxxj" path="res://Scenes/Systems/ui_layer.tscn" id="10_2cm1y"]
[ext_resource type="Texture2D" uid="uid://dcw0v1rjdfnn3" path="res://Assets/Environment/Props/Bramble1.png" id="13_38u66"]
[ext_resource type="Texture2D" uid="uid://d0ircqae1knpw" path="res://Assets/Environment/Props/Bramble2PROP.png" id="14_eai0y"]
[ext_resource type="PackedScene" uid="uid://f72ajnkx6ih5" path="res://Scenes/Environment/Fish.tscn" id="15_t0l2q"]
[ext_resource type="Texture2D" uid="uid://m2lp2ybh6pbf" path="res://Assets/Environment/Props/CoralSmall_PROP.png" id="16_7q734"]
[ext_resource type="PackedScene" uid="uid://b4jxfxm2xg2yb" path="res://Scenes/Environment/Shrub.tscn" id="16_cabgr"]
[ext_resource type="Texture2D" uid="uid://c6s44b8xrpg2b" path="res://Assets/Environment/BloodTree.png" id="17_5ydb2"]
[ext_resource type="Texture2D" uid="uid://dce3mvclveta5" path="res://Assets/Environment/Props/CoralBig_Prop.png" id="17_rp3wk"]
[ext_resource type="Texture2D" uid="uid://ek4nru0b3wax" path="res://Assets/Environment/Props/EyeStalkPROP-Sheet.png" id="18_bvdl2"]
[ext_resource type="Texture2D" uid="uid://dkmsxxt6s87fy" path="res://Assets/Environment/Props/Coral_ExtraBig.png" id="18_rwem5"]
[ext_resource type="Texture2D" uid="uid://nbqmvr7ipyy2" path="res://Assets/Environment/Props/FetusProp.png" id="19_2cm1y"]
[ext_resource type="PackedScene" uid="uid://cgkc7lr4bmh7r" path="res://Scenes/Systems/ToolTips.tscn" id="19_80lnd"]
[ext_resource type="PackedScene" uid="uid://decli4dnrpx42" path="res://Scenes/LevelScenes/LevelSwitcher.tscn" id="19_atfoh"]
[ext_resource type="PackedScene" uid="uid://cxup8ebd3egtk" path="res://Scenes/LevelScenes/Level6.tscn" id="20_jm0qw"]
[ext_resource type="PackedScene" uid="uid://df0lebnns0vfl" path="res://Scenes/Systems/codex_button.tscn" id="22_jm0qw"]
[ext_resource type="PackedScene" uid="uid://ct0d53f75vuby" path="res://Scenes/Systems/pause_button.tscn" id="23_dn4aj"]
[ext_resource type="Shader" uid="uid://8ybpndce5vd8" path="res://Scripts/Shaders/Glow.gdshader" id="26_rp3wk"]

[sub_resource type="Environment" id="2"]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 1.5
adjustment_enabled = true

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("18_bvdl2")
region = Rect2(0, 0, 32, 41)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("18_bvdl2")
region = Rect2(32, 0, 32, 41)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("18_bvdl2")
region = Rect2(64, 0, 32, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_33uve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwem5"]
shader = ExtResource("26_rp3wk")
shader_parameter/hpass = 1.0
shader_parameter/vpass = 1.0
shader_parameter/radius = 65
shader_parameter/unit = Vector2(1, 1)

[node name="Level5" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_y1pfi")

[node name="PlantManager" parent="." instance=ExtResource("2_istt8")]
sun_points = 1000

[node name="GameLayer" type="Node2D" parent="."]
process_mode = 1
z_index = 1

[node name="ZombieSpawner1" parent="GameLayer" instance=ExtResource("3_atfoh")]
position = Vector2(747, 77)
Round1_Zombies = {
"Base": 0,
"BucketHead": 0,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 1,
"Ticker": 0
}
Round2_Zombies = {
"Base": 0,
"BucketHead": 2,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round3_Zombies = {
"Base": 3,
"BucketHead": 1,
"ConeHead": 3,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 4,
"Ticker": 0
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner1" instance=ExtResource("4_jm0qw")]
z_index = 1
position = Vector2(-37, 0)

[node name="ZombieSpawner2" parent="GameLayer" instance=ExtResource("3_atfoh")]
position = Vector2(747, 109)
Round1_Zombies = {
"Base": 3,
"BucketHead": 0,
"ConeHead": 0,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 1,
"Ticker": 0
}
Round2_Zombies = {
"Base": 0,
"BucketHead": 2,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 3,
"ConeHead": 2,
"Dancer": 1,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 3,
"Ticker": 0
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner2" instance=ExtResource("4_jm0qw")]
z_index = 1
position = Vector2(-36, 1)

[node name="ZombieSpawner3" parent="GameLayer" instance=ExtResource("3_atfoh")]
position = Vector2(747, 141)
Round1_Zombies = {
"Base": 0,
"BucketHead": 1,
"ConeHead": 3,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 0,
"BucketHead": 2,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round3_Zombies = {
"Base": 3,
"BucketHead": 2,
"ConeHead": 3,
"Dancer": 1,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 3,
"Ticker": 0
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner3" instance=ExtResource("4_jm0qw")]
z_index = 1
position = Vector2(-38, 1)

[node name="ZombieSpawner4" parent="GameLayer" instance=ExtResource("3_atfoh")]
position = Vector2(751, 173)
Round1_Zombies = {
"Base": 3,
"BucketHead": 0,
"ConeHead": 0,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 1,
"Ticker": 0
}
Round2_Zombies = {
"Base": 0,
"BucketHead": 2,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round3_Zombies = {
"Base": 1,
"BucketHead": 3,
"ConeHead": 3,
"Dancer": 1,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 2,
"Ticker": 0
}
waveDelay = 1.2

[node name="WavePreview" parent="GameLayer/ZombieSpawner4" instance=ExtResource("4_jm0qw")]
z_index = 1
position = Vector2(-41, -1)

[node name="ZombieSpawner5" parent="GameLayer" instance=ExtResource("3_atfoh")]
position = Vector2(754, 205)
Round1_Zombies = {
"Base": 0,
"BucketHead": 1,
"ConeHead": 3,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round2_Zombies = {
"Base": 0,
"BucketHead": 2,
"ConeHead": 1,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 0,
"Ticker": 0
}
Round3_Zombies = {
"Base": 3,
"BucketHead": 2,
"ConeHead": 2,
"Dancer": 0,
"Football": 0,
"PoleVault": 0,
"ScreenDoor": 3,
"Ticker": 0
}

[node name="WavePreview" parent="GameLayer/ZombieSpawner5" instance=ExtResource("4_jm0qw")]
z_index = 1
position = Vector2(-41, -1)

[node name="GridManager" parent="GameLayer" instance=ExtResource("5_dn4aj")]
z_index = -2

[node name="WaveManager" parent="GameLayer" instance=ExtResource("6_b1djl")]
z_index = 1
position = Vector2(-59, 222)
script = ExtResource("7_7q734")
StartDelay = 5
Wave2StartTime = 25
Wave3StartTime = 40
Wave1_Interval = 2.0
Wave2_Interval = 4
Wave3_Interval = 2.0

[node name="BackGroundMuisc" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_dn4aj")
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("2")

[node name="PlantSelectionMenu" parent="." instance=ExtResource("9_rwem5")]
layout_mode = 1
offset_left = 25.0
offset_top = 313.0
offset_right = 65.0
offset_bottom = 353.0
scale = Vector2(0.5, 0.5)

[node name="UILayer" parent="." instance=ExtResource("10_2cm1y")]
layout_mode = 1

[node name="Node2D" type="Node2D" parent="."]
visible = false
z_index = -1
position = Vector2(2, 0)

[node name="ColorRect" type="ColorRect" parent="Node2D"]
offset_left = -42.0
offset_top = -58.0
offset_right = 806.0
offset_bottom = 444.0
mouse_filter = 2
color = Color(0, 0, 0, 0.0784314)

[node name="ToolTips" parent="." instance=ExtResource("19_80lnd")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -154.0
offset_right = 209.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSwitcher" parent="." instance=ExtResource("19_atfoh")]
visible = false
layout_mode = 1
nextLevel = ExtResource("20_jm0qw")
next_level = "res://Scenes/LevelScenes/Level6.tscn"
level_unlocked = 6

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CodexBG2" parent="." instance=ExtResource("22_jm0qw")]
layout_mode = 0
offset_left = 686.0
offset_top = 313.0
offset_right = 739.0
offset_bottom = 373.0

[node name="PauseButton" parent="." instance=ExtResource("23_dn4aj")]
layout_mode = 0
offset_left = 684.0
offset_top = 380.0
offset_right = 739.0
offset_bottom = 403.0

[node name="Environment2" type="Node2D" parent="."]

[node name="Coral" type="Node2D" parent="Environment2"]

[node name="CoralSmallProp" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(543, 347)
texture = ExtResource("16_7q734")

[node name="CoralSmallProp3" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(499, 335)
texture = ExtResource("16_7q734")

[node name="CoralSmallProp2" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(670, 400)
texture = ExtResource("16_7q734")
flip_h = true

[node name="CoralSmallProp4" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(601, 401)
texture = ExtResource("16_7q734")
flip_h = true

[node name="CoralSmallProp5" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(718, 321)
texture = ExtResource("16_7q734")

[node name="CoralSmallProp6" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(420, 382)
texture = ExtResource("16_7q734")

[node name="CoralSmallProp8" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(113, 323)
texture = ExtResource("16_7q734")

[node name="CoralSmallProp9" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(262, 8)
texture = ExtResource("16_7q734")
flip_h = true

[node name="CoralSmallProp10" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(497, 16)
texture = ExtResource("16_7q734")

[node name="CoralBigProp" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(618, 344)
texture = ExtResource("17_rp3wk")

[node name="CoralBigProp2" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(406, 333)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp4" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(707, 397)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp5" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(724, 4)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp6" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(263, 323)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp3" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(490, 396)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp7" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(620, 3)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp8" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(609, 15)
texture = ExtResource("17_rp3wk")
flip_h = true

[node name="CoralBigProp9" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(353, 14)
texture = ExtResource("17_rp3wk")

[node name="Biggest_Coral" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(563, 378)
texture = ExtResource("18_rwem5")

[node name="Biggest_Coral2" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(662, 343)
texture = ExtResource("18_rwem5")

[node name="FetusProp" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(438, 4)
texture = ExtResource("19_2cm1y")

[node name="FetusProp2" type="Sprite2D" parent="Environment2/Coral"]
position = Vector2(465, 347)
texture = ExtResource("19_2cm1y")

[node name="Bramble" type="Node2D" parent="Environment2"]
visible = false

[node name="Bramble1" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(505, 328)
texture = ExtResource("13_38u66")

[node name="Bramble2" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(454, 388)
texture = ExtResource("13_38u66")

[node name="Bramble3" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(584, 399)
texture = ExtResource("13_38u66")

[node name="Bramble4" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(640, 303)
texture = ExtResource("13_38u66")

[node name="Bramble5" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(483, 0)
texture = ExtResource("13_38u66")

[node name="Bramble6" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(660, 11)
texture = ExtResource("13_38u66")

[node name="BrambleSmall" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(366, 316)
texture = ExtResource("14_eai0y")
flip_h = true

[node name="BrambleSmall2" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(455, 331)
texture = ExtResource("14_eai0y")
flip_h = true

[node name="BrambleSmall3" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(402, 343)
texture = ExtResource("14_eai0y")

[node name="BrambleSmall4" type="Sprite2D" parent="Environment2/Bramble"]
position = Vector2(428, 399)
texture = ExtResource("14_eai0y")
flip_h = true

[node name="Fish" type="Node2D" parent="Environment2"]

[node name="Fish" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(542, 386)

[node name="Fish2" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(515, 353)

[node name="Fish5" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(180, 329)

[node name="Fish6" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(37, 326)

[node name="Fish7" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(573, 19)

[node name="Fish8" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(455, 394)

[node name="Fish9" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(315, 14)

[node name="Fish3" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(573, 342)

[node name="Fish4" parent="Environment2/Fish" instance=ExtResource("15_t0l2q")]
z_index = -1
position = Vector2(633, 395)

[node name="Shrubs" type="Node2D" parent="Environment2"]
visible = false

[node name="Shrub" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(560, 13)
scale = Vector2(1, 1)

[node name="Shrub2" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(474, 339)
scale = Vector2(1, 1)

[node name="Shrub3" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(521, 392)
scale = Vector2(1, 1)

[node name="Shrub4" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(193, 327)
scale = Vector2(1, 1)

[node name="Shrub5" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(433, 330)
scale = Vector2(1, 1)

[node name="Shrub6" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(658, 403)
scale = Vector2(1, 1)

[node name="Shrub7" parent="Environment2/Shrubs" instance=ExtResource("16_cabgr")]
position = Vector2(297, 14)
scale = Vector2(1, 1)

[node name="Trees" type="Node2D" parent="Environment2"]
visible = false

[node name="BloodTree" type="Sprite2D" parent="Environment2/Trees"]
z_index = 1
position = Vector2(561, 364)
texture = ExtResource("17_5ydb2")
flip_h = true

[node name="BloodTree2" type="Sprite2D" parent="Environment2/Trees"]
z_index = 1
position = Vector2(396, 7)
texture = ExtResource("17_5ydb2")

[node name="Special" type="Node2D" parent="Environment2"]
visible = false

[node name="EyeStalk" type="AnimatedSprite2D" parent="Environment2/Special"]
position = Vector2(606, 395)
sprite_frames = SubResource("SpriteFrames_33uve")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(370, 208)

[node name="GlowShaderPass" type="CanvasLayer" parent="."]

[node name="GlowPass" type="ColorRect" parent="GlowShaderPass"]
material = SubResource("ShaderMaterial_rwem5")
offset_left = -49.0
offset_top = -65.0
offset_right = 804.0
offset_bottom = 435.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="maw_placed" from="PlantManager" to="." method="_on_plant_manager_maw_placed"]
[connection signal="wave2AlmostStart" from="GameLayer/WaveManager" to="." method="_on_wave_manager_wave_2_almost_start"]
[connection signal="ToolTipHid" from="ToolTips" to="." method="_on_tool_tips_tool_tip_hid"]
